--- a/hakaton_project/editor/templates/comparator.html
+++ b/hakaton_project/editor/templates/comparator.html
@@ -150,7 +150,7 @@ and JavaScript is used to handle formula rendering and symbol insertion.
             <button onclick="addSymbol('\\frac{}{}')">Fraction</button>
             <button onclick="addSymbol('\\sum_{}^{}')">Sum</button>
             <button onclick="addSymbol('\\int_{}^{}')">Integral</button>
-            <button onclick="addSymbol('\\log(x)')">Logarithm</button>
+            <button onclick="addSymbol('\\log{x}')">Logarithm</button>
         </div>
 
         <div class="result">
