--- a/hakaton_project/editor/templates/editor.html
+++ b/hakaton_project/editor/templates/editor.html
@@ -114,14 +114,14 @@ formula rendering.
         <div class="buttons">
             <button onclick="addSymbol('+')">+</button>
             <button onclick="addSymbol('-')">-</button>
-            <button onclick="addSymbol('\\times')">×</button>
-            <button onclick="addSymbol('\\div')">÷</button>
+            <button onclick="addSymbol('\\times{}')">×</button>
+            <button onclick="addSymbol('\\div{}')">÷</button>
             <button onclick="addSymbol('^{}')">x<sup>2</sup></button>
             <button onclick="addSymbol('\\sqrt{}')">√</button>
             <button onclick="addSymbol('\\frac{}{}')">Fraction</button>
             <button onclick="addSymbol('\\sum_{}^{}')">Sum</button>
             <button onclick="addSymbol('\\int_{}^{}')">Integral</button>
-            <button onclick="addSymbol('\\log(x)')">Logarithm</button>
+            <button onclick="addSymbol('\\log{x}')">Logarithm</button>
         </div>
 
         <div class="result">
